--- a/stm32f407-vga.ioc
+++ b/stm32f407-vga.ioc
@@ -1,35 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SDIO_RX
-Dma.Request1=SDIO_TX
-Dma.RequestsNb=2
-Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_RX.0.Instance=DMA2_Stream3
-Dma.SDIO_RX.0.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_RX.0.Mode=DMA_PFCTRL
-Dma.SDIO_RX.0.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SDIO_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SDIO_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_TX.1.Instance=DMA2_Stream6
-Dma.SDIO_TX.1.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_TX.1.Mode=DMA_PFCTRL
-Dma.SDIO_TX.1.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_USE_FIND,_FS_EXFAT,_USE_MKFS,USE_DMA_CODE_SD
-FATFS.USE_DMA_CODE_SD=1
+FATFS.USE_DMA_CODE_SD=0
 FATFS._CODE_PAGE=855
 FATFS._FS_EXFAT=1
 FATFS._USE_FIND=1
@@ -38,16 +9,15 @@ FATFS._USE_MKFS=0
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=FATFS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SDIO
-Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP0=FATFS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SDIO
+Mcu.IP5=SYS
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -74,8 +44,6 @@ Mcu.UserName=STM32F407VETx
 MxCube.Version=4.27.0
 MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -145,7 +113,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
