--- a/stm32f407-vga.ioc
+++ b/stm32f407-vga.ioc
@@ -48,7 +48,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.OTG_FS_IRQn=true\:1\:0\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
