--- a/stm32f407-vga.ioc
+++ b/stm32f407-vga.ioc
@@ -51,6 +51,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:1\:0\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
