Using latest FATFS (v0.13c)

--- a/stm32f407-vga.ioc
+++ b/stm32f407-vga.ioc
@@ -1,34 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
-FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_USE_FIND,_FS_EXFAT,_USE_MKFS,USE_DMA_CODE_SD
-FATFS.USE_DMA_CODE_SD=0
-FATFS._CODE_PAGE=855
-FATFS._FS_EXFAT=1
-FATFS._USE_FIND=1
-FATFS._USE_LFN=1
-FATFS._USE_MKFS=0
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=FATFS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SDIO
-Mcu.IP5=SYS
-Mcu.IP6=USB_DEVICE
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=RTC
+Mcu.IP3=SDIO
+Mcu.IP4=SYS
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PC12
 Mcu.Pin11=PD2
-Mcu.Pin12=VP_FATFS_VS_SDIO
-Mcu.Pin13=VP_RTC_VS_RTC_Activate
-Mcu.Pin14=VP_RTC_VS_RTC_Calendar
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin12=VP_RTC_VS_RTC_Activate
+Mcu.Pin13=VP_RTC_VS_RTC_Calendar
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC8
@@ -37,7 +28,7 @@ Mcu.Pin6=PA11
 Mcu.Pin7=PA12
 Mcu.Pin8=PC10
 Mcu.Pin9=PC11
-Mcu.PinsNb=17
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -114,7 +105,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=144000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -157,8 +148,6 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-VP_FATFS_VS_SDIO.Mode=SDIO
-VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
