Don't crash if no SD card inserted

--- a/stm32f407-z80emu.ioc
+++ b/stm32f407-z80emu.ioc
@@ -14,20 +14,17 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PC12
-Mcu.Pin11=PD2
-Mcu.Pin12=VP_RTC_VS_RTC_Activate
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC8
-Mcu.Pin5=PC9
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=PC10
-Mcu.Pin9=PC11
-Mcu.PinsNb=15
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PC12
+Mcu.Pin8=PD2
+Mcu.Pin9=VP_RTC_VS_RTC_Activate
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -49,20 +46,14 @@ PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PC10.Mode=SD_4_bits_Wide_bus
-PC10.Signal=SDIO_D2
-PC11.Mode=SD_4_bits_Wide_bus
-PC11.Signal=SDIO_D3
-PC12.Mode=SD_4_bits_Wide_bus
+PC12.Mode=SD_1_bit
 PC12.Signal=SDIO_CK
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC8.Mode=SD_4_bits_Wide_bus
+PC8.Mode=SD_1_bit
 PC8.Signal=SDIO_D0
-PC9.Mode=SD_4_bits_Wide_bus
-PC9.Signal=SDIO_D1
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -71,7 +62,7 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD2.Mode=SD_4_bits_Wide_bus
+PD2.Mode=SD_1_bit
 PD2.Signal=SDIO_CMD
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
